new img folder add

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Sweet Shop</title>
     <link 
     rel="icon"
-     href="./img/cakecenter22.jpg"
+     href="./img/egglesscake.jpg"
     type="img/jpg">
       <link rel="stylesheet" href="./css/style.css">
 </head>
