--- a/index.html
+++ b/index.html
@@ -10,17 +10,24 @@
     type="img/jpg">
       <link rel="stylesheet" href="./css/style.css">
 </head>
-<body>
-    <h1 class="page-heading">
+<body class="body">
+    <h1 class="text-center text-dark">
         Welcome to Bhakti Cake Shop
     </h1>
+    <p class="text-center">Enjoy the sweet cake with taste of love and care.we provide the 
+        best quality cake with the best treat...
+    </p>
     <div class="button-container">
-        <a href="./page/About.html">
-            <button class="my-buttons">About</button>
+        <a href="./page/About.html" class="no-underline">
+            <button class="btn btn-primary">Explore Menu</Menu></button>
         </a>
 
-        <a href="./page/Services.html">
-            <button class="my-buttons">Services</button>
+        <a href="./page/Services.html" class="no-underline">
+            <button class="btn btn-secondary">Contacy us</button>
         </a>
     </div>
+    <p class="color text-center">Welcome to Bakery, where every confection tells a story of passion and dedication. Founded by 
+        a team of seasoned bakers with a shared love for crafting delectable treats, our bakery embodies
+         a commitment to quality, creativity, and customer satisfaction. From the finest ingredients sourced locally to the meticulous attention to detail in every recipe, we take pride in delivering indulgent experiences that delight taste buds and warm hearts. With each cake, pastry, and dessert, we strive to create moments of joy and celebration, making every
+         occasion a little sweeter.</p>
 </body>
