--- a/index.html
+++ b/index.html
@@ -9,14 +9,19 @@
      href="./img/egglesscake.jpg"
     type="img/jpg">
       <link rel="stylesheet" href="./css/style.css">
+      <link rel="stylesheet" href="./css/index.css">
+
 </head>
 <body class="body">
     <h1 class="text-center text-dark">
         Welcome to Bhakti Cake Shop
     </h1>
-    <p class="text-center">Enjoy the sweet cake with taste of love and care.we provide the 
+    <p class="text-center">Enjoy the<spn class="subtitle-highlight"> sweet cake </spn>with taste of love and care.we provide the 
         best quality cake with the best treat...
     </p>
+    <h2 class="text-center why-choose-us-heading">
+        why choose us?
+    </h2>
     <div class="button-container">
         <a href="./page/About.html" class="no-underline">
             <button class="btn btn-primary">Explore Menu</Menu></button>
