img folder me new folder add

--- a/index.html
+++ b/index.html
@@ -13,24 +13,76 @@
 
 </head>
 <body class="body">
-    <h1 class="text-center text-dark">
+    <h1 class="text-center" class="fs-50">
         Welcome to Bhakti Cake Shop
     </h1>
     <p class="text-center">Enjoy the<spn class="subtitle-highlight"> sweet cake </spn>with taste of love and care.we provide the 
         best quality cake with the best treat...
     </p>
+    <div class="header-section">
+        <div class="header-img-container">
+        <img src="./img/cake shop.jpg" class="header-img">
+        </div>
+        <div class="header-description-container">
+            <h2>
+                Explore our cake and order your favorite cake..
+            </h2>
+            <p>
+                we are providing the best quality cake with the best taste.we have 
+                virity of cake items in our cake.you can Explore our cake and orderyour
+                favorite cake.we provide the free delivery service.
+            </p>
+            <div class="button-container">
+                <a href="./page/About.html" class="no-underline">
+                    <button class="btn btn-primary">Explore Menu</Menu></button>
+                </a>
+        
+                <a href="./page/Services.html" class="no-underline">
+                    <button class="btn btn-secondary">Contacy us</button>
+                </a>
+            </div>
+        </div>
+
+    </div>
     <h2 class="text-center why-choose-us-heading">
         why choose us?
     </h2>
-    <div class="button-container">
-        <a href="./page/About.html" class="no-underline">
-            <button class="btn btn-primary">Explore Menu</Menu></button>
-        </a>
-
-        <a href="./page/Services.html" class="no-underline">
-            <button class="btn btn-secondary">Contacy us</button>
-        </a>
+    <div class="why-choose-us-container">
+        <div class="why-choose-us-card">
+            <img src="./img/why-choose-us/hygine.png" class="why-choose-us-img alt=hygine">
+            <h3 class="text-center">
+                hygine
+            </h3>
+            <p class="text-center">we maintain the highest levle of hygine ..
+            </p>
+        </div>
+        <div class="why-choose-us-card">
+            <img src="./img/why-choose-us/delivery.png" class="why-choose-us-img alt=delivery">
+            <h3 class="text-center">
+                Delivery
+            </h3>
+            <p class="text-center">we provide fastest delivary...
+            </p>
+        </div>
+        <div class="why-choose-us-card">
+            <img src="./img/why-choose-us/price.png" class="why-choose-us-img alt=price">
+            <h3 class="text-center">
+                price
+            </h3>
+            <p class="text-center">we provide the best quality cake at the best price...
+            </p>
+        </div>
+        <div class="why-choose-us-card">
+            <img src="./img/why-choose-us/yummy.png" class="why-choose-us-img alt=yummy">
+            <h3 class="text-center">
+                Yummy
+            </h3>
+            <p class="text-center">
+                we provide the quality cake with the best taste...
+            </p>
+        </div>
     </div>
+   
     <p class="color text-center">Welcome to Bakery, where every confection tells a story of passion and dedication. Founded by 
         a team of seasoned bakers with a shared love for crafting delectable treats, our bakery embodies
          a commitment to quality, creativity, and customer satisfaction. From the finest ingredients sourced locally to the meticulous attention to detail in every recipe, we take pride in delivering indulgent experiences that delight taste buds and warm hearts. With each cake, pastry, and dessert, we strive to create moments of joy and celebration, making every
