text center calss added

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
         <div class="header-description-container">
             <h2>
-                Explore our cake and order your favorite cake..
+                Explore our cake and order your favorite cake..🍰
             </h2>
             <p>
                 we are providing the best quality cake with the best taste.we have 
