services file class add

--- a/index.html
+++ b/index.html
@@ -88,3 +88,5 @@
          a commitment to quality, creativity, and customer satisfaction. From the finest ingredients sourced locally to the meticulous attention to detail in every recipe, we take pride in delivering indulgent experiences that delight taste buds and warm hearts. With each cake, pastry, and dessert, we strive to create moments of joy and celebration, making every
          occasion a little sweeter.</p>
     </body>
+    </html>
+    
