--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 </a>
         
                 <a href="./page/Services.html" class="no-underline">
-                    <button class="btn btn-secondary">Contacy us</button>
+                    <button class="btn btn-secondary">Contact us</button>
                 </a>
             </div>
         </div>
